@@ -88,3 +88,8 @@
 
 + 
 
+- Fixed username not being capslock sensitive
+- Usernames can now have a maximum length of 20 chars
+- Fixed a bug where when a admin logged out the system would still recognize the user as a admin
+- Fixed a bug where logging in sometimes didnt remove the login box.
+-
